--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 PORT=
-DATABASE_URL=
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/sm"
+JWT_SECRET=
+JWT_ACCESS_EXPIRED=
+JWT_REFRESH_EXPIRED=
