--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,9 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/sm"
 JWT_SECRET=
 JWT_ACCESS_EXPIRED=
 JWT_REFRESH_EXPIRED=
+
+# FIREBASE
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_BUCKET_NAME=
