--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@prisma/client": "^4.7.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "firebase": "^9.16.0",
+    "firebase-admin": "^11.5.0",
     "moment": "^2.29.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
