--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -35,6 +36,7 @@
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/websockets": "^9.3.2",
     "@prisma/client": "^4.7.1",
+    "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "firebase": "^9.16.0",
