seed admin account

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,15 @@
-PORT=
+NODE_ENV=develop
+PORT=5000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/sm"
 JWT_SECRET=
-JWT_ACCESS_EXPIRED=
-JWT_REFRESH_EXPIRED=
+JWT_ACCESS_EXPIRED=2h
+JWT_REFRESH_EXPIRED=10d
 
 # FIREBASE
 FIREBASE_PROJECT_ID=
 FIREBASE_PRIVATE_KEY=
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_BUCKET_NAME=
+
+# DEVELOPMENT
+KEEP_SM_AWAKE_HEALTH_CHECK_END_POINT=
